--- a/live_price/Base.lproj/MainInterface.storyboard
+++ b/live_price/Base.lproj/MainInterface.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M4Y-Lb-cyx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -30,35 +31,35 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0CV-fC-cNd">
-                                                    <rect key="frame" x="18" y="10" width="60" height="14.5"/>
+                                                    <rect key="frame" x="20" y="13" width="60" height="9"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="5TX-9v-Hb6"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Waq-mQ-D2p">
-                                                    <rect key="frame" x="252" y="10" width="60" height="14.5"/>
+                                                    <rect key="frame" x="245" y="13" width="60" height="9"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="9k8-Kx-P0R"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="irh-Qs-TZR">
-                                                    <rect key="frame" x="187" y="10" width="60" height="14.5"/>
+                                                    <rect key="frame" x="184" y="13" width="60" height="9"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="60" id="fBI-kz-Bt7"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKU-nM-fQu">
-                                                    <rect key="frame" x="81" y="10" width="101" height="14.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <rect key="frame" x="80" y="13" width="99" height="9"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -71,18 +72,18 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="TKU-nM-fQu" firstAttribute="leading" secondItem="0CV-fC-cNd" secondAttribute="trailing" constant="3" id="5vV-jG-ffu"/>
+                                                <constraint firstItem="TKU-nM-fQu" firstAttribute="leading" secondItem="0CV-fC-cNd" secondAttribute="trailing" id="5vV-jG-ffu"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="Waq-mQ-D2p" secondAttribute="bottom" constant="2" id="8cW-1O-RhV"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="irh-Qs-TZR" secondAttribute="bottom" constant="2" id="9be-Nz-cKg"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="0CV-fC-cNd" secondAttribute="bottom" constant="2" id="DnM-0t-Vas"/>
-                                                <constraint firstItem="Waq-mQ-D2p" firstAttribute="leading" secondItem="irh-Qs-TZR" secondAttribute="trailing" constant="5" id="OKw-Rq-SKR"/>
+                                                <constraint firstItem="Waq-mQ-D2p" firstAttribute="leading" secondItem="irh-Qs-TZR" secondAttribute="trailing" constant="1" id="OKw-Rq-SKR"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="TKU-nM-fQu" secondAttribute="bottom" constant="2" id="PNE-8r-sRp"/>
                                                 <constraint firstItem="0CV-fC-cNd" firstAttribute="top" secondItem="Wwt-Bg-eSA" secondAttribute="topMargin" constant="2" id="X0v-gT-TIQ"/>
                                                 <constraint firstItem="irh-Qs-TZR" firstAttribute="top" secondItem="Wwt-Bg-eSA" secondAttribute="topMargin" constant="2" id="bWj-ku-nbD"/>
                                                 <constraint firstItem="irh-Qs-TZR" firstAttribute="leading" secondItem="TKU-nM-fQu" secondAttribute="trailing" constant="5" id="fVg-fK-uHg"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Waq-mQ-D2p" secondAttribute="trailing" id="gCa-ig-1d8"/>
                                                 <constraint firstItem="Waq-mQ-D2p" firstAttribute="top" secondItem="Wwt-Bg-eSA" secondAttribute="topMargin" constant="2" id="oYM-hi-uIW"/>
-                                                <constraint firstItem="0CV-fC-cNd" firstAttribute="leading" secondItem="Wwt-Bg-eSA" secondAttribute="leadingMargin" constant="10" id="rdE-ig-nfA"/>
+                                                <constraint firstItem="0CV-fC-cNd" firstAttribute="leading" secondItem="Wwt-Bg-eSA" secondAttribute="leadingMargin" constant="5" id="rdE-ig-nfA"/>
                                                 <constraint firstItem="TKU-nM-fQu" firstAttribute="top" secondItem="Wwt-Bg-eSA" secondAttribute="topMargin" constant="2" id="w9o-AC-2Ci"/>
                                             </constraints>
                                         </tableViewCellContentView>
