--- a/CoinPrice/Base.lproj/Main.storyboard
+++ b/CoinPrice/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -137,9 +137,9 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="429-Bs-CKc">
-                                            <rect key="frame" x="19" y="6" width="60" height="19.5"/>
+                                            <rect key="frame" x="19" y="6" width="70" height="19.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="60" id="L1h-M9-tjK"/>
+                                                <constraint firstAttribute="width" constant="70" id="L1h-M9-tjK"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                             <nil key="textColor"/>
@@ -156,7 +156,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0원" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7x4-kd-y8r">
-                                            <rect key="frame" x="82" y="5" width="148" height="20"/>
+                                            <rect key="frame" x="92" y="5" width="138" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="wSI-gy-Pkt"/>
                                             </constraints>
@@ -172,7 +172,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWa-s3-2ND">
-                                            <rect key="frame" x="82" y="25" width="148" height="20"/>
+                                            <rect key="frame" x="92" y="25" width="138" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="sT2-AL-wh0"/>
                                             </constraints>
@@ -394,40 +394,12 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="MSm-Tq-Fgv">
-                                        <rect key="frame" x="0.0" y="185" width="375" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MSm-Tq-Fgv" id="kUJ-6D-ZR9">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="중국 (KRW/CNY)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3f-VP-Wel">
-                                                    <rect key="frame" x="21" y="14.5" width="122.5" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lHO-Pk-Jio">
-                                                    <rect key="frame" x="331" y="14.5" width="24" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="h3f-VP-Wel" firstAttribute="leading" secondItem="kUJ-6D-ZR9" secondAttribute="leadingMargin" constant="5" id="0px-Tb-0Kr"/>
-                                                <constraint firstAttribute="trailing" secondItem="lHO-Pk-Jio" secondAttribute="trailing" constant="20" id="PD6-Qw-UPb"/>
-                                                <constraint firstItem="h3f-VP-Wel" firstAttribute="centerY" secondItem="kUJ-6D-ZR9" secondAttribute="centerY" id="fcy-L6-sQ5"/>
-                                                <constraint firstItem="lHO-Pk-Jio" firstAttribute="centerY" secondItem="kUJ-6D-ZR9" secondAttribute="centerY" id="sSs-tY-HZt"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                             <tableViewSection headerTitle="" id="9sT-wo-h1N">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vDp-Y8-1Rf">
-                                        <rect key="frame" x="0.0" y="271" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="221" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vDp-Y8-1Rf" id="q6k-0W-zyg">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -455,7 +427,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="cmp-az-Xmc">
-                                        <rect key="frame" x="0.0" y="321" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="271" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cmp-az-Xmc" id="dzx-fo-qrx">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -483,7 +455,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="hid-vZ-lDh">
-                                        <rect key="frame" x="0.0" y="371" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="321" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hid-vZ-lDh" id="tv4-cv-bWr">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -495,7 +467,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TWF-b3-r8o">
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="TWF-b3-r8o">
                                                     <rect key="frame" x="306" y="9.5" width="51" height="31"/>
                                                     <connections>
                                                         <action selector="progresson_action:" destination="ogz-Z2-cUJ" eventType="valueChanged" id="qew-LK-lxS"/>
@@ -511,7 +483,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="XE6-Vv-QZe">
-                                        <rect key="frame" x="0.0" y="421" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="371" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XE6-Vv-QZe" id="NXn-Kv-Yxz">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -543,7 +515,7 @@
                             <tableViewSection headerTitle="" id="aDX-AZ-8xw">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3Fv-eW-lDV">
-                                        <rect key="frame" x="0.0" y="507" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="457" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Fv-eW-lDV" id="NCs-1j-sdL">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -571,10 +543,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="1iA-EL-6wk">
-                                        <rect key="frame" x="0.0" y="557" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="507" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1iA-EL-6wk" id="Giu-7M-JtX">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="버전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6H-Aq-PXb">
@@ -599,7 +571,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="wwD-8q-3fn">
-                                        <rect key="frame" x="0.0" y="607" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="557" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wwD-8q-3fn" id="6Gc-eT-DK0">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
@@ -627,7 +599,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="UnC-Tb-Q4z">
-                                        <rect key="frame" x="0.0" y="657" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="607" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UnC-Tb-Q4z" id="T3G-Dd-qMo">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
@@ -664,9 +636,6 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="추가기능" id="kev-hT-XQ2"/>
                     <connections>
-                        <outlet property="cny_" destination="lHO-Pk-Jio" id="NQ1-V9-JZt"/>
-                        <outlet property="cny_cell" destination="MSm-Tq-Fgv" id="0Xd-ga-jbE"/>
-                        <outlet property="cny_text" destination="lHO-Pk-Jio" id="lx0-iR-rDf"/>
                         <outlet property="jpy_" destination="8pL-9N-oU8" id="wY0-xS-Po8"/>
                         <outlet property="jpy_cell" destination="JMM-b7-atw" id="YTs-OE-Lqh"/>
                         <outlet property="jpy_text" destination="8pL-9N-oU8" id="oRh-0i-Xcm"/>
@@ -1247,10 +1216,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow2" width="64" height="64"/>
-        <image name="setting" width="21" height="21"/>
-        <image name="tab1" width="21" height="21"/>
-        <image name="tab2" width="21" height="21"/>
-        <image name="wallet" width="21" height="21"/>
+        <image name="arrow2" width="128" height="128"/>
+        <image name="setting" width="51.200000762939453" height="51.200000762939453"/>
+        <image name="tab1" width="51.200000762939453" height="51.200000762939453"/>
+        <image name="tab2" width="51.200000762939453" height="51.200000762939453"/>
+        <image name="wallet" width="51.200000762939453" height="51.200000762939453"/>
     </resources>
 </document>
